--- a/EcommerceAdminDashboard/package.json
+++ b/EcommerceAdminDashboard/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.19"
   },
